[project]
name = "comfyui-badmannodes"
description = "Nodes:Badman_Blend, Badman_HexGenerator, Badman_String, Badman_Concat_String, Badman_Print, BadmanIO, BadmanIntUtil"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/MariusKM/ComfyUI-BadmanNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-BadmanNodes"
Icon = ""
