[project]
name = "comfyui-badmannodes"
description = "Nodes:Badman_Blend, Badman_HexGenerator, Badman_String, Badman_Concat_String, Badman_Print, BadmanIO, BadmanIntUtil"
version = "1.0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/MariusKM/ComfyUI-BadmanNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bigting"
DisplayName = "ComfyUI-BadmanNodes"
Icon = ""
#adding stuff to trigger action