[project]
name = "comfyui-badmannodes"
description = "Utility nodes including ImageBlend, Math, Strings, Color tools, Wildcard Processor, Latent Noise Mask, and WAN Three Frame To Video for keyframe-based video generation"
version = "1.2.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/MariusKM/ComfyUI-BadmanNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bigting"
DisplayName = "ComfyUI-BadmanNodes"
Icon = ""
#adding stuff to trigger action